--- a/package.json
+++ b/package.json
@@ -3,6 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.20",
+    "@syncfusion/ej2-base": "^26.1.37",
+    "@syncfusion/ej2-dropdowns": "^26.1.38",
+    "@syncfusion/ej2-react-buttons": "^26.1.35",
+    "@syncfusion/ej2-react-calendars": "^26.1.38",
+    "@syncfusion/ej2-react-dropdowns": "^26.1.38",
+    "@syncfusion/ej2-react-inputs": "^26.1.38",
+    "@syncfusion/ej2-react-navigations": "^26.1.38",
+    "@syncfusion/ej2-react-schedule": "^26.1.38",
+    "@syncfusion/ej2-react-splitbuttons": "^26.1.35",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +22,8 @@
     "@types/node": "^16.18.44",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -43,6 +57,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
+    "sass": "^1.77.6",
     "tailwindcss": "^3.3.3"
   }
 }
